--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
       <!-- WelcomeQuiz-->
       <div id="greeting">
-        <h1>Welcome to Code Quiz</h1>
+        <h1>Welcome to the Code Quiz</h1>
         <button id="beginQuiz" class="copy">Begin Quiz</button>
       </div>
       <!-- MainQuiz -->
