script element  points to an external script file through the src attribute

--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     </main>
   </body>
   <!-- ScriptToQuestions and Quiz link -->
-  <script src=""></script>
-  <script src=""></script>
+  <script src="assets/questions.js"></script>
+  <script src="assets/quiz.js"></script>
 </html>
