--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <header>
+      <div id="highscores">
+        <a href="/scores.html"> High Scores </a>
+      </div>
+
       <div id="timer"></div>
     </header>
     <main class="main-container">
